@@ -1,5 +1,9 @@
 
 
+Features:
+- defs: add HXSIZEOF_Z*
+
+
 libHX 2.1 (December 23 2008)
 ============================
 - defs: fix bogus offsetof macro for non-GCC
